--- a/publishing.html
+++ b/publishing.html
@@ -10,11 +10,16 @@
 <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
 </head>
 <body class="app">
-    <div class="header">PORTFOLIO</div>
+
 
     
     <div class="publishingcontainer">
       <div class="section-header">Publishing Design</div>
+      <div class="navbuttons">
+        <a href="./index.html">Home</a>
+        <a href="./motion.html">Motion Design</a>
+        <a href="./graphic.html">Graphic Design</a>
+      </div>
       <div class="printcontainer">
         <img
           class="printed"
