--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
 
     <div class="subheader">My name is Max Turner</div>
     <div class="opening-line">I'm a Graphic Designer from SLC, UT</div>
-    <a class="portfolio" href="./portfolio.html">View My Work Here</a>
+    <div class="viewmyworkhere" >View My Work Here:</div>
+    <div class="navigation">
+        <a class="portfolio" href="./graphic.html">Graphic Design</a>
+        <a class="portfolio" href="./motion.html">Motion Design</a>
+        <a class="portfolio" href="./publishing.html">Publishing</a>
+      </div>
 <div class="about-me">About Me</div>
 <div class="paragraph">For as long as I can remember, I’ve had a desire to create things. Much of my youth was spent making comics inspired by Calvin & Hobbes and The Far Side, and I was often scolded by my teachers for doodling instead of taking notes. 
     I never learned my lesson, and that creative impulse led me to pursue a career in digital design. I graduated from 
     Mountainland Technical College’s Digital Design program in 2023. I am well versed in Photoshop, Illustrator, InDesign, Xd, After Effects, and Premiere Pro. </div>
-<div class="contact">Contact</div>
-<div class="email">maxturner19200@gmail.com</div>
-<div class="linkedin">linkedin username</div>
+<a class="portfolio" href="./services.html">Services</a>
 </body>
 </html>
