--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
 <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
 </head>
 <body class="app">
-    <div class="header">WELCOME</div>
+    <div class="homenav">
+        <img class="logo" src="personal logo red (1).png" alt="logo">
+        <div class="navbuttons">
+            <a href="./graphic.html">Graphic Design</a>
+            <a href="./motion.html">Motion Design</a>
+            <a href="./publishing.html">Publishing</a>
+            <a href="./services.html">Services</a>
+          </div>
+    </div>
+    <div class="header">MAX TURNER <br> GRAPHIC DESIGN</div>
 
-    <div class="subheader">My name is Max Turner</div>
-    <div class="opening-line">I'm a Graphic Designer from SLC, UT</div>
-    <div class="viewmyworkhere" >View My Work Here:</div>
-    <div class="navigation">
-        <a class="portfolio" href="./graphic.html">Graphic Design</a>
-        <a class="portfolio" href="./motion.html">Motion Design</a>
-        <a class="portfolio" href="./publishing.html">Publishing</a>
-      </div>
+
+    <video autoplay loop class="indexclip">
+        <source type="video/mp4" src="Ball Animation White BG.mp4">
+    </video>
 <div class="about-me">About Me</div>
 <div class="paragraph">For as long as I can remember, I’ve had a desire to create things. Much of my youth was spent making comics inspired by Calvin & Hobbes and The Far Side, and I was often scolded by my teachers for doodling instead of taking notes. 
     I never learned my lesson, and that creative impulse led me to pursue a career in digital design. I graduated from 
