--- a/graphic.html
+++ b/graphic.html
@@ -44,6 +44,19 @@
           />
         </div>
         <div class="image-container">
+          <img class="basicimage" src="Barn Owl Logo-01.png" alt="barn owl logo" />
+          <img
+            class="basicimage"
+            src="Benjamin Turner Art Deco Logo 1000-01.png"
+            alt="Actuary Logo"
+          />
+          <img
+            class="basicimage"
+            src="Night Owl Y on B-01.png"
+            alt="Night Owl Logo"
+          />
+        </div>
+        <div class="image-container">
           <img class="basicimage" src="Mothman-01.png" alt="Mothman Cartoon" />
           <img
             class="basicimage"
