--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="app">
     <div class="homenav">
-        <img class="logo" src="personal logo red (1).png" alt="logo">
+        <img class="logo" src="max Turner graphic design-01.png" alt="logo">
         <div class="navbuttons">
             <a href="./graphic.html">Graphic Design</a>
             <a href="./motion.html">Motion Design</a>
@@ -19,7 +19,8 @@
             <a href="./services.html">Services</a>
           </div>
     </div>
-    <div class="header">MAX TURNER <br> GRAPHIC DESIGN</div>
+    <div class="header">MAX TURNER</div>
+    <div class="subheader">GRAPHIC DESIGN</div>
 
 
     <video autoplay loop class="indexclip">
