--- a/publishing.html
+++ b/publishing.html
@@ -9,6 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
 </head>
+<img class="portlogo" src="max Turner graphic design-01.png" alt="logo">
 <body class="app">
 
 
