--- a/graphic.html
+++ b/graphic.html
@@ -9,9 +9,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
 </head>
+<img class="portlogo" src="max Turner graphic design-01.png" alt="logo">
+
 <body class="app">
+
     <div class="graphiccontainer">
+
         <div class="section-header">Graphic Design</div>
+
         <div class="navbuttons">
           <a href="./index.html">Home</a>
           <a href="./motion.html">Motion Design</a>
