--- a/services.html
+++ b/services.html
@@ -9,6 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
 </head>
+<img class="mainlogo" src="max Turner graphic design-01.png" alt="logo">
 <body class="app services">
     <div class="header">Services</div>
     <div class="navbuttons">
@@ -26,5 +27,13 @@
 <div class="contact">Contact</div>
 <div class="email">maxturner19200@gmail.com</div>
 <div class="linkedin">linkedin username</div>
+<div class="servicesleft">
+    <img class="serviceimagetopleft" height="275px" src="IMG_3828 (1).JPG" alt="sketches">
+    <img class="serviceimagebottomleft" height="275px" src="random shape logos-01.png" alt="simple shape logos">
+</div>
+<div class="servicesright">
+    <img class="serviceimagetopright" height="275px" src="sketches.JPG" alt="logo sketches">
+    <img class="serviceimagebottomright" height="275px" src="Ben Turner Logo-01.png" alt="alternate T logos">
+</div>
 </body>
 </html>
